5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1771_1189.log
== TEST (2019-05-30 08:34:44) 
-- CODE:
from numpy import*
pali=input("write phrase: ")
cop=""
i=0
while(i<len(pali)):
	if(pali[i]==" "):
		cop = cop + ""
	else:
		cop = cop + srt(pali[i])
	i=i+1
print(cop.upper())
valor=0
i2=0
while(i2<len(cop)):
	if(cop[i2]==cop[-1*(i2+1)]):
		valor=valor+1
	else:
		valor=valor+0
	i2=i2+1
if(valor==len(cop)):
	print("1")
else;
print("0")

	
-- ERROR:
File "XXXX", line 22
    else;
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:34:52) 
-- CODE:
from numpy import*
pali=input("write phrase: ")
cop=""
i=0
while(i<len(pali)):
	if(pali[i]==" "):
		cop = cop + ""
	else:
		cop = cop + srt(pali[i])
	i=i+1
print(cop.upper())
valor=0
i2=0
while(i2<len(cop)):
	if(cop[i2]==cop[-1*(i2+1)]):
		valor=valor+1
	else:
		valor=valor+0
	i2=i2+1
if(valor==len(cop)):
	print("1")
else:
print("0")

	
-- ERROR:
File "XXXX", line 23
    print("0")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:35:00) 
-- CODE:
from numpy import*
pali=input("write phrase: ")
cop=""
i=0
while(i<len(pali)):
	if(pali[i]==" "):
		cop = cop + ""
	else:
		cop = cop + srt(pali[i])
	i=i+1
print(cop.upper())
valor=0
i2=0
while(i2<len(cop)):
	if(cop[i2]==cop[-1*(i2+1)]):
		valor=valor+1
	else:
		valor=valor+0
	i2=i2+1
if(valor==len(cop)):
	print("1")
else:
	print("0")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:36:27) 
-- CODE:
from numpy import*
pali=input("write phrase: ")
cop=""
i=0
while(i<len(pali)):
	if(pali[i]==" "):
		cop = cop + ""
	else:
		cop = cop + str(pali[i])
	i=i+1
print(cop.upper())
valor=0
i2=0
while(i2<len(cop)):
	if(cop[i2]==cop[-1*(i2+1)]):
		valor=valor+1
	else:
		valor=valor+0
	i2=i2+1
if(valor==len(cop)):
	print("1")
else:
	print("0")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:36:39) 
-- CODE:
from numpy import*
pali=input("write phrase: ")
cop=""
i=0
while(i<len(pali)):
	if(pali[i]==" "):
		cop = cop + ""
	else:
		cop = cop + str(pali[i])
	i=i+1
print(cop.upper())
valor=0
i2=0
while(i2<len(cop)):
	if(cop[i2]==cop[-1*(i2+1)]):
		valor=valor+1
	else:
		valor=valor+0
	i2=i2+1
if(valor==len(cop)):
	print("1")
else:
	print("0")

	
-- EXECUTION TIME:
0.506897
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
